fix: replace UpgradeState record for Java 8